// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider renders correctly 1`] = `
<DocumentFragment>
  <div
    class="rc-slider slider-picker"
  >
    <div
      style="height: 12px; position: relative;"
    >
      <div
        style="position: absolute; top: 0px; right: 0px; bottom: 0px; left: 0px;"
      >
        <div
          class="hue-horizontal"
          style="padding: 0px 2px; position: relative; height: 100%; background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);"
        >
          <div
            style="position: absolute; left: 69.44444444444443%;"
          >
            <div
              style="width: 14px; height: 14px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-transform: translate(-7px, -1px); transform: translate(-7px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <div
        style="margin-top: 20px;"
      >
        <div
          style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
        >
          <div
            style="height: 12px; background: rgb(187, 179, 230); cursor: pointer; -webkit-border-radius: 2px 0 0 2px; border-radius: 2px 0 0 2px;"
          />
        </div>
        <div
          style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
        >
          <div
            style="height: 12px; background: rgb(136, 121, 210); cursor: pointer;"
          />
        </div>
        <div
          style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
        >
          <div
            style="height: 12px; background: rgb(85, 64, 191); cursor: pointer;"
          />
        </div>
        <div
          style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
        >
          <div
            style="height: 12px; background: rgb(60, 45, 134); cursor: pointer;"
          />
        </div>
        <div
          style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
        >
          <div
            style="height: 12px; background: rgb(34, 26, 77); cursor: pointer; -webkit-transform: scaleY(1.8); transform: scaleY(1.8); -webkit-border-radius: 0 2px 2px 0; border-radius: 0 2px 2px 0;"
          />
        </div>
        <div
          style="clear: both;"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`SliderPointer renders correctly 1`] = `
<DocumentFragment>
  <div
    style="width: 14px; height: 14px; -webkit-border-radius: 6px; border-radius: 6px; -webkit-transform: translate(-7px, -1px); transform: translate(-7px, -1px); background-color: rgb(248, 248, 248); -webkit-box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37); box-shadow: 0 1px 4px 0 rgba(0, 0, 0, 0.37);"
  />
</DocumentFragment>
`;

exports[`SliderSwatch renders correctly 1`] = `
<DocumentFragment>
  <div
    style="height: 12px; cursor: pointer;"
  />
</DocumentFragment>
`;

exports[`SliderSwatches renders correctly 1`] = `
<DocumentFragment>
  <div
    style="margin-top: 20px;"
  >
    <div
      style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
    >
      <div
        style="height: 12px; background: rgb(230, 179, 179); cursor: pointer; -webkit-border-radius: 2px 0 0 2px; border-radius: 2px 0 0 2px;"
      />
    </div>
    <div
      style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
    >
      <div
        style="height: 12px; background: rgb(210, 121, 121); cursor: pointer;"
      />
    </div>
    <div
      style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
    >
      <div
        style="height: 12px; background: rgb(191, 64, 64); cursor: pointer;"
      />
    </div>
    <div
      style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
    >
      <div
        style="height: 12px; background: rgb(134, 45, 45); cursor: pointer;"
      />
    </div>
    <div
      style="box-sizing: border-box; width: 20%; padding-right: 1px; float: left;"
    >
      <div
        style="height: 12px; background: rgb(77, 26, 26); cursor: pointer; -webkit-border-radius: 0 2px 2px 0; border-radius: 0 2px 2px 0;"
      />
    </div>
    <div
      style="clear: both;"
    />
  </div>
</DocumentFragment>
`;
